--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mapbox/polyline": "^1.1.1",
     "@sentry/browser": "^6.19.7",
     "@sentry/node": "^6.19.7",
+    "@supabase/supabase-js": "^2.39.7",
     "autosize": "^5.0.1",
     "basic-auth": "^2.0.1",
     "body-parser": "^1.20.2",
@@ -67,7 +68,8 @@
     "smoothscroll-polyfill": "^0.4.0",
     "source-map-support": "^0.5.21",
     "unified": "^9.2.2",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
