--- a/.env-template
+++ b/.env-template
@@ -8,7 +8,7 @@
 #
 REACT_APP_SHARETRIBE_SDK_CLIENT_ID=change-me
 REACT_APP_STRIPE_PUBLISHABLE_KEY=
-REACT_APP_MAPBOX_ACCESS_TOKEN=
+#REACT_APP_MAPBOX_ACCESS_TOKEN=
 
 # If you are using a process with privileged transitions,
 # Client Secret needs to be set too. The one related to Client ID.
@@ -16,8 +16,8 @@ REACT_APP_MAPBOX_ACCESS_TOKEN=
 SHARETRIBE_SDK_CLIENT_SECRET=
 
 # Or set up an alternative map provider (Google Maps). Check documentation.
-# REACT_APP_GOOGLE_MAPS_API_KEY=
-
+REACT_APP_GOOGLE_MAPS_API_KEY=
+REACT_APP_SUPABASE_KEY=
 # Defaults
 #
 
